conformance/tests/listenerset-allowed-routes-supported-kinds.yaml
# Copyright IBM Corp. 2019, 2022
# SPDX-License-Identifier: Apache-2.0

apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-with-listener-sets-test-supported-route-kinds
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: "{GATEWAY_CLASS_NAME}"
  listeners:
  - name: gateway-listener
    port: 80
    protocol: HTTP
    hostname: "gateway-listener.com"
    allowedRoutes:
      namespaces:
        from: All
  allowedListeners:
    namespaces:
      from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: ListenerSet
metadata:
  name: listenerset-test-allowed-routes-supported-kinds
  namespace: gateway-conformance-infra
spec:
  parentRef:
    kind: Gateway
    group: gateway.networking.k8s.io
    name: gateway-with-listener-sets-test-supported-route-kinds
    namespace: gateway-conformance-infra
  listeners:
  - name: listener-set-listener-allowed-routes-tls-only
    port: 443
    protocol: TLS
    hostname: "listener-set-listener-allowed-routes-tls-only.com"
    allowedRoutes:
      namespaces:
        from: All
      kinds:
      - kind: HTTPRoute
    tls:
      mode: Passthrough
